Se sube a la versión 6.0.0 de spring para eliminar las vulnerabilidades de seguridad de la versión anterior, la 5.3.20